# soroban-auth-pool

./: .gitignore  Cargo.toml  README.md
src/: accounting.rs  auth.rs  lib.rs  pool.rs
tests/: helper.rs  test_pool_borrow_on_behalf_of.rs  test_pool_deposit.rs  test_pool_deposit_permit.rs
