[package]
name = "soroban-auth-pool"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils", "soroban-auth/testutils"]

[dependencies]
soroban-sdk = "0.1.0"
soroban-auth = "0.1.0"

[dev_dependencies]
soroban-sdk = { version = "0.1.0", features = ["testutils"] }
soroban-auth = { version = "0.1.0", features = ["testutils"] }
rand = { version = "0.7.3" }
soroban-auth-pool = { path = ".", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[patch.crates-io]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "b66355c" }
soroban-spec = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "b66355c" }
soroban-auth = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "b66355c" }
soroban-sdk-macros = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "b66355c" }
soroban-env-common = { git = "https://github.com/stellar/rs-soroban-env", rev = "966b159" }
soroban-env-guest = { git = "https://github.com/stellar/rs-soroban-env", rev = "966b159" }
soroban-env-host = { git = "https://github.com/stellar/rs-soroban-env", rev = "966b159" }
soroban-env-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "966b159" }
soroban-native-sdk-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "966b159" }
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "3ba1368" }